--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,45 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <header>
+    <h1>WebCamp</h1>
+    <nav>
+    <ul>
+      <% if user_signed_in? %>
+      <li><%= attachment_image_tag current_user, :profile_image, size:'30x30', format: 'jpeg', fallback: 'no_image.jpg', size:'30x30' %></li>
+      <li style='text-align: left;'>
+        こんにちは、<br><%= current_user.name %>さん▼
+        <ul>
+          <li>メニュー</li>
+          <li>新規作成</li>
+          <li>マイページ</li>
+        </ul>
+      </li>
+      <% else %>
+      <li><%= image_tag "no_image.jpg", size:'30x30' %></li>
+      <li>こんにちは、<br><%= admin_signed_in? ? '管理人' : 'ゲスト' %>さん　</li>
+      <% end %>
+
+      <li><%= link_to "TOP", root_path %></li>
+      <li><%= link_to "About", about_path %></li>
+      <% if admin_signed_in? %>
+      <!-- admin_userの場合 -->
+      <li><%= link_to "Sign out", destroy_admin_session_path, method: :delete %></li>
+      <% elsif user_signed_in? %>
+      <!-- end_userの場合 -->
+      <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+      <!--ゲストの場合 -->
+      <li><%= link_to "Log in", new_user_session_path %></li>
+      <li><%= link_to "[Log in for Admin]", new_admin_session_path  if Rails.env.development? %></li>
+      <% end %>
+    </ul>
+  </nav>
+  </header>
 
   <body>
     <%= yield %>
   </body>
+
+  <footer></footer>
 </html>
