--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,74 +22,81 @@
    padding: 0;
  }
 
- .clearfix::after {
-   content: "";
-   display: block;
-   clear: both;
- }
-
  header {
-   position: relative;
-   background-color: black;
    color: white;
+   background-color: black;
    padding: 10px 30px;
-
    img {
      border: thin solid dimgray;
-     display: inline-block;
+     background-color: black;
    }
    a {
+     color: white;
      text-decoration: none;
-     color: whitesmoke;
      &:hover {
        color: yellow;
+       text-decoration: none;
      }
    }
    nav {
      ul {
        text-align: right;
        li {
-         vertical-align: middle;
-         // aタグの方が優先度が高いため、色設定ができない
-         list-style: none;
-         display: inline-block;
          margin: 0 10px;
-         position: relative;
-         ul {
-           display: none;
-           width: 100%;
-           position: absolute;
-           top: 100%;
-           right: 0;
-           text-align: center;
-           li {
-             display: block;
-             width: 100%;
-             margin: 0;
-             border: thin solid black;
-             border-top: none;
-             color: black;
-             &:first-child {
-               background-color: #ddd;
-               &:hover {
-                 color: black;
-               }
-             }
-           }
-         }
+         display: inline-block;
+         list-style: none;
+         vertical-align: middle;
          &:hover {
            color: yellow;
-           ul {
-             display: inline-block;
-           }
          }
        }
      }
    }
  }
 
+#menue-parent {
+  position: relative;
+  text-align: left;
+  &:hover {
+    #menue-child {
+      display: block;
+    }
+  }
+}
+
+#menue-child {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    text-align: left;
+    background-color: white;
+    li {
+      display: block;
+      width: 150px;
+      margin: 0;
+      border: thin solid black;
+      border-top: none;
+      padding: 2px 10px;
+      color: black;
+      &:hover {
+        color: black;
+      }
+      &:first-child {
+        background-color: #aaa;
+      }
+      a {
+        color: black;
+        &:hover {
+          color: purple;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
  footer {
    background-color: #000;
    color: #fff;
-   padding: 10px 30px;
+   padding: 50px;
  }
