--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -5,14 +5,14 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag    'admin/application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'admin/application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
   </head>
   <header>
-    <h1>PlayCreatePublishLifeGame（管理者）</h1>
-    <%= link_to 'ろぐあうと', destroy_admin_session_path, method: :delete %>
+    <h1>（管理者）</h1>
+    <%= link_to 'ろぐあうと', destroy_admin_session_path, method: :delete %><br>
+    <%= link_to 'rooと', root_path %><br>
+    <%= link_to 'category_indexと', admin_categories_path %>
 
   </header>
 
