--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -4,21 +4,18 @@
     <title>PlayCreatePublishLifeGame_管理者</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
   </head>
+
   <header>
     <h1>（管理者）</h1>
-    <%= link_to 'ろぐあうと', destroy_admin_session_path, method: :delete %><br>
-    <%= link_to 'rooと', root_path %><br>
-    <%= link_to 'category_indexと', admin_categories_path %>
-
+    <%= link_to 'ろぐあうと', destroy_admin_session_path, method: :delete %>
   </header>
 
   <body>
     <%= yield %>
   </body>
 
-  <footer><%= debug(params) if Rails.env.development? %></footer>
+  <footer></footer>
 </html>
