--- a/app/assets/stylesheets/user/post_comments.scss
+++ b/app/assets/stylesheets/user/post_comments.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the PostComments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#comments-index {
+  width: 100%;
+}
+
+.comment-article {
+  word-wrap: break-word;
+}
+
+#comment-form {
+  min-height: 50px;
+  width: 100%;
+}
