--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <li><%= link_to "about", about_path %></li>
       <li><%= link_to "投稿一覧", patterns_path %></li>
 
-      <% if user_signed_in? %>
+      <% if user_signed_in? then %>
       <li><%= attachment_image_tag current_user, :profile_image, size:"30x30", format: "jpeg", fallback: "no_image.jpg", size:"30x30" %></li>
       <li id="menue-parent">
         こんにちは、<br>
@@ -30,7 +30,7 @@
             <span class="glyphicon glyphicon-list" aria-hidden="true" style="color: rgba(0,0,0,0);"></span>　メニュー
           </li>
           <li>
-            <span class="glyphicon glyphicon-qrcode" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             <%= link_to "　パターン作成", edit_making_path %>
           </li>
           <li>
