confirmed moving correctly LifeGame

--- a/app/assets/stylesheets/common/application.scss
+++ b/app/assets/stylesheets/common/application.scss
@@ -26,6 +26,9 @@
    color: white;
    background-color: black;
    padding: 10px 30px;
+   h1 {
+     color: white;
+   }
    img {
      border: thin solid dimgray;
      background-color: black;
