--- a/app/assets/stylesheets/user/patterns.scss
+++ b/app/assets/stylesheets/user/patterns.scss
@@ -19,13 +19,10 @@
   padding: 30px 0;
   margin: 0 auto;
   text-align: center;
+  font-size: 30px;
   color: limegreen;
   background-color: black;
-  // text-align: justify;
-  // text-justify: inter-ideograph;
-  // font-size: 1em;
-  // line-height: 1em;
-  // letter-spacing: 0em;
+  line-height: 0.6em;
 }
 
 #patterns-show-nav {
