rename variable and method at js.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,14 +1,11 @@
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <%= attachment_image_tag @user, :profile_image, size:"30x30", format: "jpeg", fallback: "no_image.jpg", size:"30x30" %>
-    <%= @user.name %>
-    <%= @user.introduction %>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-10 col-md-offset-1">
+    <div class='members-show'>
+      <%= attachment_image_tag @user, :profile_image, size:"30x30", format: "jpeg", fallback: "no_image.jpg", size:"30x30" %>
+      <%= @user.name %>
+      <%= @user.introduction %>
+    </div>
     <%= render 'patterns/index', patterns: @patterns %>
   </div>
 </div>
