--- a/app/views/post_comments/_article.html.erb
+++ b/app/views/post_comments/_article.html.erb
@@ -1,6 +1,6 @@
 
-<p class="comment-article">
-  <span class="pattern-submit-user">
+<p class="comments__article">
+  <span class="patterns__submit--user">
     <%= "#{ date_format( comment.created_at ) } / #{ comment.user.name }" %><br>
   </span>
   <%= comment.body %>
