--- a/app/assets/stylesheets/common/application.scss
+++ b/app/assets/stylesheets/common/application.scss
@@ -62,3 +62,16 @@
    color: #fff;
    padding: 50px;
  }
+
+
+ .lifeGame {
+   &__show{
+     padding: 30px 0;
+     margin: 0 auto;
+     text-align: center;
+     font-size: 30px;
+     color: limegreen;
+     background-color: black;
+     line-height: 0.6em;
+   }
+ }
