--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,8 +1,8 @@
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <div class='members-show'>
-      <%= attachment_image_tag @user, :profile_image, size:"30x30", format: "jpeg", fallback: "no_image.jpg", size:"30x30" %>
+    <div class='members__show'>
+      <%= attachment_image_tag @user, :profile_image, size: 50, fallback: "no_image.jpg" %>
       <%= @user.name %>
       <%= @user.introduction %>
     </div>
