--- a/app/views/patterns/show.html.erb
+++ b/app/views/patterns/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <nav id='patterns-show-nav'>
+    <nav class='patterns__show--nav'>
       <ul>
         <li>
           作成日: <%= date_format( @pattern.created_at ) %>
@@ -23,19 +23,19 @@
     <%= render 'patterns/article', pattern: @pattern, character_limit: 201, image_side_length: 90, style_option: 'border: none; pointer-events: none;' %>
 
     <p>
-      <input type="button" value="開始"        id="start-process" onclick="startProcess();">
-      <input type="button" value="一時停止" id="stop-process" onclick="stopProcess();">
-      <input type="button" value="リフレッシュ" id="refresh-button"   onclick="initializeLifeGame();">
+      <input type="button" value="開始"               class="lifeGame__start"       onclick="startProcess();">
+      <input type="button" value="一時停止"        class="lifeGame__stop"       onclick="stopProcess();">
+      <input type="button" value="リフレッシュ" class="lifeGame__refresh"   onclick="initializeLifeGame();">
       interval = 100ms
     </p>
-    <p id="show-info">(ここにカウントが表示されます)</p>
-    <p id="show-pattern">(ここにライフゲームが表示されます)</p>
+    <p class="lifeGame__info">(ここにカウントが表示されます)</p>
+    <p class="lifeGame__show">(ここにライフゲームが表示されます)</p>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-6">
-    <div id="comments-index">
+    <div class="comments__index">
       <h3>最新のコメント</h3>
       <%= render 'post_comments/article', comment: @latest_comment %>
     </div>
@@ -43,7 +43,7 @@
     <div>
       <% if user_signed_in? then %>
       <%= form_with url: pattern_post_comment_path( @pattern ) do | f |%>
-      <%= f.text_field :body, id: 'comment-form' %>
+      <%= f.text_field :body, class: 'comments__form' %>
       <%= f.submit '投稿', class: 'btn btn-default' %>
       <% end %>
       <% end %>
