--- a/app/assets/stylesheets/user/members.scss
+++ b/app/assets/stylesheets/user/members.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Members controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.members {
+  &__show {
+    min-height: 150px;
+    width: 100%;
+    margin: 20px 10px;
+  }
+}
