--- a/app/views/patterns/_article.html.erb
+++ b/app/views/patterns/_article.html.erb
@@ -1,5 +1,5 @@
 
-<div class="patterns__article" style="<%= style_option %>">
+<div class="patterns__article <%= "patterns__article--#{action_name}" %>">
   <div class="col-sm-2">
     <%= link_to pattern_path( pattern ) do
     attachment_image_tag pattern,
@@ -7,7 +7,7 @@
     fallback: 'no_pattern_image.jpg',
     size: image_side_length,
     class: "center-block",
-    style:"margin-top: #{ ( 100 - image_side_length ) / 2 }px"
+    style:"margin-top: #{ ( 150 - image_side_length ) / 2 }px"
     end %>
   </div>
   <div class="col-sm-8">
@@ -22,6 +22,7 @@
         by <%= link_to pattern.user.name, member_path( pattern.user_id ) %>さん
       </span>
       <% end %>
+      <%= render 'patterns/property', pattern: pattern %>
     </p>
   </div>
 </div>
