--- a/app/assets/stylesheets/user/patterns.scss
+++ b/app/assets/stylesheets/user/patterns.scss
@@ -3,20 +3,62 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .patterns {
+  &__index {
+  }
+  &__show {
+    width: 100%;
+    &--bottom {
+      width: 100%;
+      margin: 20px 0;
+    }
+    &--bottomLeft {
+      max-width: 40%;
+      float: left;
+      margin: 0 5%;
+    }
+    &--bottomRight {
+      min-width: 50%;
+      float: left;
+    }
+  }
   &__article{
-    height: 150px;
     margin-bottom: 20px;
     border-bottom: 2px solid gray;
     align-items: center;
     h3 {
       font-weight: bold;
     }
-    div {
-      height: 100%;
+    &--img {
+      max-height: 150px;
+      margin: 10px;
     }
-    &--show {
+    &--patternsShow {
       border: none;
       pointer-events: none;
+    }
+    &--submitUser {
+      color: #999;
+      font-weight: bold;
+      a {
+        color: inherit;
+        &:hover {
+          text-decoration: none;
+        }
+      }
+    }
+    &--categryHeadline {
+      color: #999;
+      font-size: 10px;
+      font-weight: bold;
+    }
+    &--divLeft {
+      float: left;
+      max-width: 30%;
+    }
+    &--divRight {
+      margin-left: 30px;
+      float: left;
+      max-width: 70%;
     }
   }
   &__property {
@@ -42,18 +84,6 @@
           margin: 0 10px;
           display: inline-block;
           list-style: none;
-        }
-      }
-    }
-  }
-  &__submit {
-    &--user {
-      color: #999;
-      font-weight: bold;
-      a {
-        color: inherit;
-        &:hover {
-          text-decoration: none;
         }
       }
     }
