--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,52 +11,24 @@
 </head>
 
 <body>
+  
 <header>
   <h1>Play!Create!Publish! LifeGame</h1>
-  <nav>
-    <ul>
-      <li><%= link_to "トップ", root_path %></li>
-      <!-- li><%= link_to "PCPLGとは？", about_path %></li -->
-      <li><%= link_to "about", about_path %></li>
-      <li><%= link_to "投稿一覧", patterns_path %></li>
-
-      <% if user_signed_in? then %>
-      <li><%= attachment_image_tag current_user, :profile_image, size:"30x30", format: "jpeg", fallback: "no_image.jpg", size:"30x30" %></li>
-      <li id="menue-parent">
-        こんにちは、<br>
-        <%= current_user.name %>さん▼
-        <ul id="menue-child">
-          <li>
-            <span class="glyphicon glyphicon-list" aria-hidden="true" style="color: rgba(0,0,0,0);"></span>　メニュー
-          </li>
-          <li>
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            <%= link_to "　パターン作成", edit_making_path %>
-          </li>
-          <li>
-            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-            <%= link_to "　マイページ", member_path( current_user ) %>
-          </li>
-          <li>
-            <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
-            <%= link_to "　ログアウト", destroy_user_session_path, method: :delete %>
-          </li>
-        </ul>
-      </li>
-      <% else %>
-      <li style="text-align: left;">
-        <%= link_to new_user_session_path do %>
-        ようこそ！<br>
-        ログイン<span class="glyphicon glyphicon-log-in" aria-hidden="true" style="font-size: 10px;"></span>
-        <% end %>
-      </li>
-      <% end %>
-    </ul>
-  </nav>
+  <%= render 'layouts/headerMenue' %>
 </header>
 
   <div class="container">
-    <%= yield %>
+    <div class="row">
+
+      <div class="col-md-2">
+        <%= render 'categories/index' %>
+      </div>
+
+      <div class="col-md-10">
+        <%= yield %>
+      </div>
+
+    </div>
   </div>
 
 <footer></footer>
