--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,21 +1,20 @@
 
-<div class="row">
-  <div class="col-md-10 col-md-offset-1">
+  <div class="">
     <div class='members__show'>
-      <div class="col-sm-2">
-      <%= attachment_image_tag @user, :profile_image, size: 50, fallback: "no_image.jpg" %>
+      <div class="">
+        <%= attachment_image_tag @user, :profile_image, size: 90, fallback: "no_image.jpg" %>
+      </div>
+      <div class="">
+        <p class='members__show--body'>
+          <h3><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <%= @user.name %></h3>
+          自己紹介: <%= @user.introduction.blank? ? '本文がありません' : @user.introduction %>
+        </p>
+      </div>
     </div>
-      <div class="col-sm-8">
-      <h4>ニックネーム</h4>
-      <p>
-        <%= @user.name %>
-      </p>
-      <h4>自己紹介</h4>
-      <p>
-        <%= @user.introduction %>
-      </p>
-    </div>
-    </div>
+  </div>
+
+<div class="">
+  <div class='members__show'>
     <%= render 'patterns/index', patterns: @patterns %>
   </div>
 </div>
