category search move categories controller to patterns controllers

--- a/app/views/patterns/index.html.erb
+++ b/app/views/patterns/index.html.erb
@@ -1,12 +1,6 @@
 
 <h2 class="patterns__index">
-  <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-  <% if @category_name.nil? then %>
-  全投稿
-  <% else %>
-  カテゴリー「<%= @category_name %>」
-  <% end %>
-  一覧
+  <%= get_index_title( request.fullpath ) %>一覧
 </h2>
 
 <%= render 'patterns/index', patterns: @patterns %>
