--- a/app/views/categories/_index.html.erb
+++ b/app/views/categories/_index.html.erb
@@ -8,7 +8,7 @@
   <ul>
     <li class="categories__index--li">
       <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
-      <%= link_to category.second, category_path( category.first ) %>
+      <%= link_to category.second, patterns_path( category_id: category.first ) %>
     </li>
   </ul>
   <% end %>
