--- a/app/assets/stylesheets/common/patterns.scss
+++ b/app/assets/stylesheets/common/patterns.scss
@@ -20,6 +20,15 @@
       min-width: 50%;
       float: left;
     }
+    &--lifeGameDisplay {
+      padding: 30px 0;
+      margin: 0 auto;
+      text-align: center;
+      font-size: 30px;
+      color: limegreen;
+      background-color: black;
+      line-height: 0.6em;
+    }
   }
   &__article{
     margin-bottom: 20px;
