--- a/app/views/patterns/show.html.erb
+++ b/app/views/patterns/show.html.erb
@@ -5,13 +5,13 @@
     <%= render 'patterns/article', pattern: @pattern, character_limit: 201 %>
 
     <p>
-      <input type="button" value="開始"               class="lifeGame__start"       onclick="startProcess();">
-      <input type="button" value="一時停止"        class="lifeGame__stop"       onclick="stopProcess();">
-      <input type="button" value="リフレッシュ" class="lifeGame__refresh"   onclick="initializeLifeGame();">
+      <input type="button" value="開始"               class="patterns__show--lifeGameStart"       onclick="startProcess();">
+      <input type="button" value="一時停止"        class="patterns__show--lifeGameStop"       onclick="stopProcess();">
+      <input type="button" value="リフレッシュ" class="patterns__show--lifeGameRefresh"   onclick="initializeLifeGame();">
       interval = 100ms
     </p>
-    <p class="lifeGame__info">(ここにカウントが表示されます)</p>
-    <p class="lifeGame__show">(ここにライフゲームが表示されます)</p>
+    <p class="patterns__show--lifeGameInfo">(ここにカウントが表示されます)</p>
+    <p class="patterns__show--lifeGameDisplay">(ここにライフゲームが表示されます)</p>
   </div>
 
 <div class="clearfix patterns__show--bottom">
