pattern conversion method move to Application helper. And update details.

--- a/app/views/members/_detail.html.erb
+++ b/app/views/members/_detail.html.erb
@@ -1,4 +1,4 @@
-<% if /edit/.match?( action_name ) then %>
+<% if action_name == 'edit' then %>
 
 <%= form_with model: user, url: member_path( user ) do | f | %>
 <%= f.hidden_field :id, value: current_user.id %>
@@ -21,7 +21,7 @@
 <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span><br>
 <%= user.introduction.blank? ? '本文がありません' : user.introduction %><br>
 <% if user.id == current_user&.id then %>
-<input type="button" value="編集" onclick="editUserInfo( this );" class="<%= "btn btn-default members__show--#{ current_user&.id || 0 }" %>">
+<input type="button" value="編集" onclick="editUserInfo(this);" class="<%= "btn btn-default members__show--#{ current_user&.id || 0 }" %>">
 <% end %>
 
 <% end %>
