--- a/app/assets/stylesheets/common/application.scss
+++ b/app/assets/stylesheets/common/application.scss
@@ -69,9 +69,9 @@
  }
 
  footer {
+   height: 100px;
+   width: 100%;
    background-color: #000;
    color: #fff;
-   padding: 50px;
+   margin-top: 30px;
  }
-
- 
