--- a/app/assets/stylesheets/common/members.scss
+++ b/app/assets/stylesheets/common/members.scss
@@ -9,7 +9,7 @@
     &--headline {
       font-size: 20px;
       font-weight: bold;
-      padding-top: 2em;
+      padding-top: 1em;
     }
     &--divLeft {
       float: left;
@@ -18,7 +18,7 @@
     &--divRight {
       margin-left: 30px;
       float: left;
-      min-width: 70%;
+      max-width: 70%;
       vertical-align: bottom;
     }
     &--img {
