--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-  
-<header>
-  <h1>Play!Create!Publish! LifeGame</h1>
-  <%= render 'layouts/headerMenue' %>
-</header>
+
+  <header>
+    <h1>Play!Create!Publish! LifeGame</h1>
+    <%= render 'layouts/headerMenue' %>
+  </header>
 
   <div class="container">
     <div class="row">
@@ -31,6 +31,8 @@
     </div>
   </div>
 
-<footer></footer>
+  <footer>
+  </footer>
+
 </body>
 </html>
