Bild up convert_text_to_data at MalingHelper.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-md-2">
+      <div class="col-md-2 application__layouts--leftSection">
         <%= render 'categories/index' %>
       </div>
 
-      <div class="col-md-10">
+      <div class="col-md-10 application__layouts--rightSection">
         <%= yield %>
       </div>
 
