Remove convert_text_to_data method errors. Build up autoComplete method at Making#edit.

--- a/app/assets/stylesheets/common/patterns.scss
+++ b/app/assets/stylesheets/common/patterns.scss
@@ -21,7 +21,7 @@
       float: left;
     }
     &--lifeGameDisplay {
-      padding: 30px 0;
+      padding: 30px;
       margin: 0 auto;
       text-align: center;
       font-size: 30px;
